--- a/relatorio.tex
+++ b/relatorio.tex
@@ -1,7 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Modelo de relatório de Disciplina
-% Preparado por Leandro Krug Wives a partir do 
-% pacote ii-ufrgs.zip disponivel em http://www.inf.ufrgs.br/utug
+% Modelo de relatório de Disciplina de MLP a partir da
+% classe latex iiufrgs disponivel em http://github.com/schnorr/iiufrgs
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -81,7 +80,7 @@
 %\author{Autor2}{Aluno} % {sobrenome}{nome} 1 para cada aluno
 
 % Professor orientador da disciplina
-\advisor[Prof.~Dr.]{Wives}{Leandro Krug} 
+\advisor[Prof.~Dr.]{Mello Schnorr}{Lucas}
 
 % Nome do(s) curso(s):
 \course{Curso de Graduação em Ciência da Computa{\c{c}}{\~a}o e Engenharia de Computação}
@@ -90,7 +89,7 @@
 \location{Porto Alegre}{RS} 
 
 % data da entrega do trabalho (mês e ano)
-\date{11}{2016}
+\date{12}{2017}
 
 
 % Palavras chave
